--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.6.1",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "json-server": "^0.17.2",
     "usemodal-vue3": "^0.3.7",
-    "vue": "^3.2.13",
-    "vue-multiselect": "^2.1.7"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
